--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,31 @@ img{
     right: 2%;
     top:calc(50% - 70px);
 }
+
+
+/* mediaqueries */
+
+
+@media (max-width:576px){
+.contenedor{
+    width: 100%;
+    height: 50%;
+}
+
+.botones{
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+}
+.atras{
+    left:2%;
+    top:calc(50% - 20px);
+}
+
+.adelante{
+    right: 2%;
+    top:calc(50% - 20px);
+}
+
+}
