--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,44 @@ html{
     font-family: serif;
 }
 
+/* header */
+
+header{
+ display: flex;
+ justify-content: space-around;
+ text-align: center;
+ border: 2px solid red;
+ height: 60px;
+}
+
+nav{
+   
+    line-height: 50px;
+}
+
+
+ul{
+    display: flex;
+    list-style: none;
+}
+
+li a{
+    text-decoration: none;
+    margin: 0 25px;
+    font-size: 20px;
+}
+
+header h1{
+    font-size: 45px;
+}
+
+
+/* fin header */
+
+
+
+
+
 img{
     width: 100%;
     height: 100%;
@@ -56,7 +94,7 @@ img{
 /* mediaqueries */
 
 
-@media (max-width:576px){
+@media (max-width:576px){  /* (max-width:576px) */
 .contenedor{
     width: 100%;
     height: 50%;
