--- a/css/style.css
+++ b/css/style.css
@@ -48,14 +48,18 @@ header h1{
 
 
 img{
-    width: 100%;
-    height: 100%;
+    width: 100% ;
+    height: 100%; 
+    border: 1px solid orange;
 }
 
 .contenedor{
-    width: 100%;
+    width: 80%;
+    position:relative;
+    height:450px;
+    margin: 0 auto;
+    border: 1px solid blue;
     position: relative;
-    height: 780px;
 }
 
 .botones{
@@ -82,12 +86,12 @@ img{
 
 .atras{
     left:2%;
-    top:calc(50% - 70px);
+    top:calc(50% - 200px);
 }
 
 .adelante{
     right: 2%;
-    top:calc(50% - 70px);
+    top:calc(50% - 200px);
 }
 
 
