--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,9 @@ li a{
 }
 
 header h1{
-    font-size: 45px;
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
+    
 }
 
 
@@ -120,4 +122,19 @@ img{
     top:calc(50% - 20px);
 }
 
+}
+
+
+
+.contenedor_prod{
+    width: 80%;
+    border:2px solid red;
+    height: 400px;
+    margin: 0 auto;
+}
+
+.prod{
+    font-size: 36px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
