--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,11 @@ img{
 .prod_8{
     margin-top: -50px;
 }
+
+
+.serv{
+    font-size: 36px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    
+}
