--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,20 @@ img{
     height: 600px;
     border:2px solid orange;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap:wrap ;
+    
 }
 
 .servi{
     font-size: 48px;
+    border:2px solid black;
+    width: 450px;
+    height: 150px;
+    text-align: center;
+}
+
+.description{
+    font-size: 16px;
 }
