--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,71 @@ img{
 .serv_dos{
     margin-top: 30px;
 }
+
+.cont{
+    text-align: center;
+    font-size: 36px;
+}
+
+/* Formulario */
+
+/* .fondo_formulario{
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+   
+} */
+
+.form{
+    background-color: #fff;
+    width: 90%;
+    max-width: 400px;
+    border-radius: 1em;
+    padding: 3.5em 1.5em;
+    margin: 0 auto;
+
+}
+
+.form__container{
+    width: 100%;
+    display: grid;
+    gap:1em;
+    grid-auto-columns: 100%;
+}
+
+.for__title{
+    text-align: center;
+    font-size: 1.9rem;
+    margin-bottom: .4em;
+}
+
+.form__input{
+font-size: 1rem;
+padding: .8em 1em;
+outline: none;
+border:none;
+border: 1px solid #bbb0b0;
+border-radius: 0.2em;
+}
+
+.form__input--message{
+    resize: none;
+    padding: 1.8em 1em;
+    margin-bottom: .5em;
+}
+
+.form__cta{
+    font-size: 1rem;
+    background-color: #089FE0;
+    color: #fff;
+    border:none;
+    font-weight: 300;
+    padding: .7em 0;
+    border-radius: .2em;
+    cursor: pointer;
+    font-weight: 400 ;
+}
+
+@media (max-width:450px){
+    .form{
+        padding: 3.5em;
+    }
+}
