--- a/css/style.css
+++ b/css/style.css
@@ -266,3 +266,18 @@ border-radius: 0.2em;
         padding: 3.5em;
     }
 }
+
+
+.foot{
+    width: 100%;
+    height: 60px;
+    border:2px solid green;
+    background-color: black;
+    color:white;
+    text-align: center;
+    
+}
+
+.infofot{
+    margin-top: 20px;
+}
